--- a/views/setting.ejs
+++ b/views/setting.ejs
@@ -68,7 +68,7 @@
       <div class="mb-3">
         <div class="d-flex align-items-center gap-2">
           <div class="input-group mb-3">
-            <input type="file" class="form-control" name="profile" accept="image/*">
+            <input type="file" class="form-control" name="profile" accept=".jpg,.jpeg,.png,.webp">
             <button class="btn btn-success image save" style="width: 20%;">저장</button>
           </div>
         </div>
@@ -117,6 +117,15 @@
 
     if (!file) {
       alert('파일을 선택하세요!');
+      return;
+    }
+
+    const allowedExtensions = ['jpg', 'jpeg', 'png', 'webp'];
+    const fileExtension = file.name.split('.').pop().toLowerCase();
+
+    if (!allowedExtensions.includes(fileExtension)) {
+      alert('jpg, jpeg, png, webp 확장자만 업로드 가능합니다.');
+      fileInput.value = '';
       return;
     }
 
