fix: 댓글 버그 개선 및 구조 변경
- 빈 내용 저장 안되도록 처리
- 댓글 수정 시 '수정됨' 표기
- 사용자 가입일과 댓글 작성일 구분하여 정상 출력되도록 처리
- 댓글 수정/취소 시 개별 업데이트하도록 구조 변경

--- a/views/title.ejs
+++ b/views/title.ejs
@@ -125,7 +125,7 @@
   </div>
   <div class="__footer__">
     <footer class="footer">
-      <p>회사명 | 주소: 전라남도 신안군 | 전화: 02-1234-5678</p>
+      <p>회사명: EX 주식회사 | 주소: 서울특별시 강남구 | 전화: 02-1234-5678</p>
       <div class="copyright">
           &copy; 2025 Company Name. All rights reserved.
       </div>
