fix: title파일의 footer 부분 수정

--- a/views/title.ejs
+++ b/views/title.ejs
@@ -53,7 +53,6 @@
     }
 
     .footer .copyright {
-      margin-top: 10px;
       font-size: 14px;
       opacity: 0.7;
     }
@@ -125,9 +124,8 @@
   </div>
   <div class="__footer__">
     <footer class="footer">
-      <p>회사명: EX 주식회사 | 주소: 서울특별시 강남구 | 전화: 02-1234-5678</p>
       <div class="copyright">
-          &copy; 2025 Company Name. All rights reserved.
+          &copy; 2025 EX-Community. All rights reserved.
       </div>
   </footer>
   </div>
